<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/layoutPadding"
    android:gravity="center"
    tools:context=".QuanLiXeKhachActivity">

    <Button
        android:id="@+id/btnSearhPassengerCar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/circleButtonStyle"
        android:text="@string/search_passenger_car"
        android:layout_marginBottom="25dp"/>

    <Button
        android:id="@+id/btnBookingHistory"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/circleButtonStyle"
        android:layout_marginBottom="25dp"
        android:text="@string/booking_history"/>

    <Button
        android:id="@+id/btnUserInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/circleButtonStyle"
        android:layout_marginBottom="25dp"
        android:text="@string/user_info"/>

    <Button
        android:id="@+id/btnDangXuat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/circleButtonStyle"
        android:layout_marginBottom="25dp"
        android:text="@string/logout"/>
</LinearLayout>