<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".SearchActivity">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:padding="@dimen/layoutPadding"
            android:paddingTop="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:weightSum="12"
                android:padding="2dp"
                android:layout_marginBottom="10dp">
                <TextView
                    android:layout_weight="4"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:text="@string/start" />

                <AutoCompleteTextView
                    android:id="@+id/autoEdtDiemDi"
                    android:layout_weight="8"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:textColor="@color/primaryTextColor"
                    android:textSize="@dimen/normalTextSize" />
            </LinearLayout>

           <LinearLayout
               android:layout_width="match_parent"
               android:layout_height="45dp"
               android:orientation="horizontal"
               android:gravity="center_vertical"
               android:weightSum="12"
               android:padding="2dp">
               <TextView
                   android:layout_weight="4"
                   android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:text="@string/end" />

               <AutoCompleteTextView
                   android:layout_weight="8"
                   android:id="@+id/autoEdtDiemDen"
                   android:layout_width="0dp"
                   android:layout_height="match_parent"/>
           </LinearLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_time" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="horizontal"
                android:weightSum="3">

                <Button
                    android:id="@+id/btnDatePicker"
                    style="@style/circleButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="1"
                    android:text="@string/pickDay"
                    android:textSize="@dimen/normalTextSize" />

                <TextView
                    android:id="@+id/txtPickedDay"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2" />
            </LinearLayout>

            <Button
                android:id="@+id/btnSearch"
                style="@style/circleButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="TÌM KIẾM" />

            <ListView
                android:id="@+id/lvPassengerCars"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            </ListView>
        </LinearLayout>
</android.support.constraint.ConstraintLayout>


<!--</ScrollView>-->
